# xdrt

./: .deepsource.toml  .gitignore  .mypy.ini  .pre-commit-config.yaml  AUTHORS.md  CMakeLists.txt  CONTRIBUTING.rst  HISTORY.md  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  tests.ipynb  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: mypy.yml  pylint.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  readme.rst  requirements.txt  usage.rst
tests/: __init__.py  test_xdr.py
xdrt/: __init__.py  cli.py  utils.py  xdr_reader.py  xvi_reader.py
xdrt/cli/: __init__.py  utils.py  xdr.py  xvi.py
xdrt/lib/nki_decompression/: LICENSE  README.md  nkidecompress.cxx  nkidecompress.h
